Fixes collapsing row issue with explicit col width

--- a/themes/newave/src/scss/mixins/_grids.scss
+++ b/themes/newave/src/scss/mixins/_grids.scss
@@ -17,6 +17,7 @@
 
   .col {
     float: left;
+    width: 100%;
 
     > div.col-contain {
       position: absolute;
